--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -10,17 +10,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
     <link rel="stylesheet" href="../static/style.css">
 
-    <title>Churros or Samosa?</title>
+    <title>Image Classification</title>
 </head>
 
 <body>
 
     <div class="container">
         <div class="row">
-            <h1>Churros or Samosa?</h1>
+            <h1>Image Classification</h1>
         </div>
         <div class="row">
-            <p>This is a very simple classifer between Churros and Samosas. </p>
+            <p>This is a very simple classifer for airplane, automobile, bird, cat, deer, dog,
+                frog, horse, ship, and truck. </p>
         </div>
         <div class="row">
             <p>Built with PyTorch/FastAI. Just upload an image from your computer and
@@ -58,19 +59,19 @@
 
     <footer>
         <p>
-            <a class="github-button" href="https://github.com/sebastian-schuchmann" data-show-count="true"
-                aria-label="Follow @sebastian-schuchmann on GitHub">Follow @sebastian-schuchmann</a>
+<!--            <a class="github-button" href="https://github.com/sebastian-schuchmann" data-show-count="true"-->
+<!--                aria-label="Follow @sebastian-schuchmann on GitHub">Follow @sebastian-schuchmann</a>-->
 
-            <a class="github-button" href="https://github.com/Sebastian-Schuchmann/ChurrosSamosaClassifier"
-                data-show-count="true" data-icon="octicon-star"
-                aria-label="Star Sebastian-Schuchmann/ChurrosSamosaClassifier on GitHub">Star</a>
+<!--            <a class="github-button" href="https://github.com/Sebastian-Schuchmann/ChurrosSamosaClassifier"-->
+<!--                data-show-count="true" data-icon="octicon-star"-->
+<!--                aria-label="Star Sebastian-Schuchmann/ChurrosSamosaClassifier on GitHub">Star</a>-->
         </p>
 
     </footer>
 
     <script src="../static/main.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+<!--    <script async defer src="https://buttons.github.io/buttons.js"></script>-->
 </body>
 
 </html>
